Handle playlist sorting by time since last played as a special case.

BUG:214761